--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=GUSTAVO\\SQLEXPRESS;Database=rpgOnePiece;Trusted_Connection=True;"
+    "DefaultConnection": "Server=tcp:harvesterrpgdbserver.database.windows.net,1433;Initial Catalog=harvesterRPG_db;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
   }
 }
