--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:harvesterrpgdbserver.database.windows.net,1433;Initial Catalog=harvesterRPG_db;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
+    "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:harvesterrpgdbserver.database.windows.net,1433;Initial Catalog=harvesterRPG_db;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\""
   }
 }
